Alignment issues fixed

--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -1,5 +1,5 @@
-.container {
-    margin-top: 10px;
+.purchase-card {
+    margin-top: 10%;
   }
   
   .purchase-card {
